readded code for Lab 7

--- a/Labs/Lab7/APPM4600Lab7.ipynb
+++ b/Labs/Lab7/APPM4600Lab7.ipynb
@@ -379,9 +379,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b4cf9683-1a98-4105-9f86-2b03bda9fcca",
+   "metadata": {},
+   "source": [
+    "### 3.2.3\n",
+    "Yes! The error at the endpoints is drastically reduced using this method. We have successfully made the Runge phenomena less present "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a04b19b3-d398-42dd-81f5-0f9a70b0d6a6",
+   "id": "1b58c9a0-71b2-4dc1-a974-fbac3978de18",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9cc08a91-ac69-4a77-a99c-1d33897f709f",
    "metadata": {},
    "outputs": [],
    "source": []
