--- a/HW/HW6/APPM4600_HW6.ipynb
+++ b/HW/HW6/APPM4600_HW6.ipynb
@@ -4,7 +4,6 @@
    "cell_type": "markdown",
    "id": "049ec7d0-d9a5-4b54-82fb-bc326330e96d",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -635,14 +634,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "375eb7a8-c387-4689-a442-2f9387ed73c7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 107,
    "id": "b31b7c99-9916-4a0b-bd9e-7ecf68aac048",
    "metadata": {
@@ -844,7 +835,7 @@
     "tags": []
    },
    "source": [
-    "### Driver Function for Newton with initial guess $[0,0,0]$"
+    "### Driver Function for Newton with initial guess $[-1,1,1]$"
    ]
   },
   {
@@ -876,7 +867,7 @@
    "id": "789f5ac1-c196-42fd-9771-3f2f120c11d6",
    "metadata": {},
    "source": [
-    "### Driver Function for Steepest Descent with initial guess $[0,0,0]$"
+    "### Driver Function for Steepest Descent with initial guess $[-1,1,1]$"
    ]
   },
   {
@@ -900,8 +891,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "11148206-77e9-442a-9a21-77f608104286",
+   "metadata": {},
+   "source": [
+    "### Driver Function for Newton's and Steepest Descent Combination with initial guess $[-1,1,1]$"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 130,
    "id": "602aee87-a5ca-4150-8014-40e4b39768a0",
    "metadata": {
     "tags": []
@@ -914,12 +913,14 @@
     "    x0= np.array([-1,1,1])\n",
     "    tol = 5e-2\n",
     "    \n",
-    "    for j in range(50):\n",
-    "      [xstar,ier,its] =  Newton(x0,tol,Nmax)\n",
+    "    \n",
+    "    [xstar,gval,ier,its2] = SteepestDescent(x0,tol,Nmax)\n",
+    "    \n",
     "        \n",
     "    tol = 1e-10\n",
     "    x0 = xstar\n",
-    "    [xstar,gval,ier,its2] = SteepestDescent(x0,tol,Nmax)\n",
+    "    for j in range(50):\n",
+    "        [xstar,ier,its] =  Newton(x0,tol,Nmax)\n",
     "    print(xstar)\n",
     "    print(\"Newton + Steepest Descent: the error message reads\", ier\t)\n",
     "    print('Newton + Steepest Descent: number of iterations is:', its + its2)"
@@ -930,7 +931,7 @@
    "id": "b4911e84-8087-4f41-ba0f-edb8150f013c",
    "metadata": {},
    "source": [
-    "### Initial guess = $[-1,1,1]$, tol for final solution = $10^{-6}$, $N_{max} = 100$"
+    "### Initial guess = $[-1,1,1]$, tol for final solution = $10^{-10}$, $N_{max} = 100$"
    ]
   },
   {
@@ -943,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 131,
    "id": "60251ac5-623a-4a96-b933-f0df8b268876",
    "metadata": {
     "tags": []
@@ -955,7 +956,7 @@
      "text": [
       "[4.04637797e-17 1.00000000e-01 1.00000000e+00]\n",
       "Newton: the error message reads: 0\n",
-      "Newton: took this many seconds: 0.0003883028030395508\n",
+      "Newton: took this many seconds: 0.0003979396820068359\n",
       "Newton: number of iterations is: 6\n"
      ]
     }
@@ -982,7 +983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 132,
    "id": "cb1a9fa3-e4f2-415e-be3a-bc181e9bff7a",
    "metadata": {
     "tags": []
@@ -1020,7 +1021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 133,
    "id": "683a6eba-9aaa-4efb-ac31-9c043721e6c0",
    "metadata": {
     "tags": []
@@ -1030,9 +1031,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[9.25244936e-11 9.99996879e-02 9.99999978e-01]\n",
+      "[4.92742491e-17 1.00000000e-01 1.00000000e+00]\n",
       "Newton + Steepest Descent: the error message reads 0\n",
-      "Newton + Steepest Descent: number of iterations is: 3\n"
+      "Newton + Steepest Descent: number of iterations is: 4\n"
      ]
     }
    ],
@@ -1047,7 +1048,7 @@
     "tags": []
    },
    "source": [
-    "This solution seems to be slightly less accurate than Newton's method, though again the tolerance was set to be the same. However, the combination of Newton's and Steepest Descent led to convergence in the least amount of iterations, only 3, compared to SD alone with 8 iterations and Newton alone with 6 iterations. This makes sense, as Newton tends to converge the fastest, given that the initial guess is close to the exact root. If it isn't Newton does not perform very well as compared to other methods. With this combination, we get the quick convergence of Newton's method with a guaranteed close intial guess, as the Steepest Descent method can converge with a further initial guess than Newton's can. So, with an initial guess like $[-1,1,1]$, that is not wildly close to the solution, we would expect that this combination converges faster than both Newton's method and the steepest descent method alone. "
+    "This solution seems to be slightly less accurate than Newton's method, though again the tolerance was set to be the same. However, the combination of Newton's and Steepest Descent led to convergence in the least amount of iterations, only 4, compared to SD alone with 8 iterations and Newton alone with 6 iterations. This makes sense, as Newton tends to converge the fastest, given that the initial guess is close to the exact root. If it isn't Newton does not perform very well as compared to other methods. With this combination, we get the quick convergence of Newton's method with a guaranteed close intial guess, as the Steepest Descent method can converge with a further initial guess than Newton's can. So, with an initial guess like $[-1,1,1]$, that is not wildly close to the solution, we would expect that this combination converges faster than both Newton's method and the steepest descent method alone. "
    ]
   },
   {
